modules/grammars/tool/src/test/resources/cocos/valid/AttributeType.td
package valid;

tool AttributeType {
    attribute path = "some/awesome/path";
}