modules/grammars/tool/src/test/resources/cocos/invalid/RootName.td
package invalid;

tool rootName {
    attribute path = "some/awesome/path";
}
